# voting-poc

./: .gitmodules  README.md
avalanche/: README.md  diagram.excalidraw  start.sh
avalanche/admin-back-end/: build.gradle.kts  gradle.properties  settings.gradle.kts
avalanche/contracts/: .eslintrc.js  .mocharc.js  README.md  package.json
avalanche/contracts-gateway/: .eslintrc.js  package-lock.json  package.json  tsconfig.json
avalanche/fivenodenetwork/: README.md  go.mod  main.go
avalanche/voter-front-end/: README.md  package.json
blockchain/solana/voting-poc/gateway/: .env  Cargo.toml
blockchain/solana/voting-poc/gateway/src/: main.rs  models.rs  routes.rs
blockchain/solana/voting-poc/gateway/src/elections/: contract.rs  models.rs  routes.rs
fabric/: README.md  diagram.excalidraw
fabric/chaincode/: build.gradle.kts  gradle.properties  settings.gradle.kts
fabric/gateway/: README.md  build.gradle.kts
fabric/local-network/: .env  .gitignore  Dockerfile.alpine  README.md  docker-compose-ca.yaml  docker-compose-nodes.yaml  docker-compose.yaml.j2  generate-election.py  requirements.txt  template.py
fabric/network-aws/: .gitignore  README.md  build.gradle.kts  cdk.json  settings.gradle.kts
fabric/voter-app/: .env  README.md  config-overrides.js  package-lock.json  package.json
solana/: .gitignore
solana/contract/: Anchor.toml  README.md
solana/gateway/: .env  README.md
solana/owner-cli/: .gitignore  README.md  voting.py
solana/signer-service/: .env  README.md  package-lock.json  package.json
solana/voter-dapp/: .env  .gitignore  README.md  (+1 more)
(+168 files in other folders)
