[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-client = "0.24.2"
tokio = { version = "1.19.2", features = ["full"] }
warp = "0.3.2"
dotenv = "0.15.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
voting = { path = "../contract/programs/voting", features = ["no-entrypoint"] }
thiserror = "1.0.31"
tracing = "0.1.35"
tracing-subscriber = "0.3.11"
rand = "0.8.5"
